# WordCountCUDA

./: CMakeLists.txt  LICENSE  README.md  build.bat  premake5.lua
include/: TrieSearchApp.hpp
src/: TrieSearchApp.cpp  dat_gpu.cu  kernel.cu  kernelinterface.cpp  main.cpp  wordcounter.cpp
src/nvcc/: trie_counter_final_fixed.cu
